Closed Bug 142549 Opened 23 years ago Closed 23 years ago

After Find in Page, spacebar doesn't page down

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: duvall, Assigned: aaronlev)

Details

Attachments

(1 file)

(2002-04-25) When you search for text on a page, and something is found and highlighted, the spacebar will no longer scroll the page down. The Page Down key works, as do the arrow keys. Clicking on the page (and losing the highlight) enables the spacebar again. Simple manual highlighting doesn't do this.
I still see this with 2002-05-16. However, I notice that if the match is on a link, then the spacebar continues to work. You can also tab onto the next link and have the spacebar work again.
Confirmed, 2002 061908 on Windows 2000.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: SunOS → All
Hardware: Sun → All
Summary: Find in page match highlighted breaks page down behavior with spacebar → After Find in Page, spacebar doesn't page down
Comment on attachment 89022 [details] [diff] [review] Fixes nsEventStateManager::FocusElementButNotDocument() so it can take aContent = nsnull r=bryner
Attachment #89022 - Flags: review+
Attachment #89022 - Flags: superreview+
Comment on attachment 89022 [details] [diff] [review] Fixes nsEventStateManager::FocusElementButNotDocument() so it can take aContent = nsnull sr=kin@netscape.com
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
this works if you dismiss the Find dlg after it finds something. (otherwise, i still need to click in the content area to move focus from the Find dlg to the page.) if what i'm doing is not the correct test, let me know (and reopen if needed). tested using 2002.09.18 trunk comm builds.
Status: RESOLVED → VERIFIED
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: