Bug 142549. After find, spacebar doesn't scroll page. r=bryner, sr=kin. Bug 102679. Composer loses focus after image delete. r=kyle, sr=kin